# booking-agent

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  db.py  main.py  models.py  persistence.py  seeds.py
backend/app/api/: deps.py
backend/app/core/: auth.py  config.py  events.py  exceptions.py  logging.py  observability.py  prompts.py  ratelimit.py  security.py
backend/app/graph/: approval_graph.py  audit.py  availability_provider.py  availability_subgraph.py  checkpointing.py  constants.py  email.py  hubspot.py  instrumentation.py  memory.py  state.py  workflow.py
backend/app/repositories/: __init__.py  audit_log.py  booking.py  memory.py  run.py
backend/app/schemas/: __init__.py  common.py  runs.py
backend/app/services/: availability.py  booking_store.py  compaction.py  email_smtp.py  email_template.py  embeddings.py  hubspot.py  run_service.py  staff_ranking.py
backend/migrations/: RUNBOOK.md  env.py
backend/migrations/versions/: a1c4e8f2b9d6_appt_staff_slot_unique.py  b2f1a9c4d7e3_idempotency_and_email_index.py  (+4 more)
backend/tests/: conftest.py  helpers.py  test_app.py  test_approval.py  test_availability.py  test_booking.py  test_checkpoint_serde.py  test_compaction.py  test_config.py  test_db.py  test_durable_backends.py  test_email_agent.py  test_email_smtp.py  test_email_template.py  test_embeddings.py  test_events.py  test_extract.py  test_extract_llm.py  test_hubspot.py  test_memory.py  test_models.py  test_observability.py  test_persistence.py  test_production_hardening.py  test_prompts.py  test_property.py  test_review_fixes.py  test_run_service.py  test_runs_api.py  test_security_and_limits.py  test_seeds.py  test_staff_ranking.py  test_tracing.py  test_validation.py  test_workflow.py
(+79 files in other folders)
