[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "booking-agent-backend"
version = "0.1.0"
description = "AI multi-agent booking workflow automation platform"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.2",
    "pydantic>=2",
    "pydantic-settings>=2",
    "sqlalchemy>=2",
    "alembic>=1.13",
    "python-dateutil>=2.8",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.30",
    # Shared event bus + rate limiter across replicas (used only when REDIS_URL is set).
    "redis>=5",
]

[project.optional-dependencies]
llm = ["langchain-openai>=0.1", "openai>=1.0"]
# Durable LangGraph checkpointer (used only when DATABASE_URL is Postgres).
postgres = ["psycopg[binary]>=3.1", "psycopg-pool>=3.1", "langgraph-checkpoint-postgres>=2"]
dev = ["pytest>=8", "pytest-cov>=5", "ruff>=0.6", "testcontainers>=4", "fakeredis>=2"]

[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
filterwarnings = [
    # starlette TestClient + httpx deprecation (third-party, not actionable here)
    "ignore:Using `httpx` with `starlette.testclient`.*:DeprecationWarning",
]

[tool.coverage.run]
source = ["app"]
omit = ["tests/*"]

[tool.coverage.report]
# Enforced bar: `pytest --cov=app` fails the build below 100%.
fail_under = 100

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
ignore = ["E501"]  # line length is handled by the formatter

[tool.ruff.lint.flake8-bugbear]
# FastAPI's Depends/Query/Body in argument defaults is the intended idiom.
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Body"]
